# Financial-Intelligence-Department-FID

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  OPERATING_MODEL.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  RELEASE_AUDIT.md  RISK_POLICY.md  ROADMAP.md  ROLLOUT_PLAN.md  SECURITY.md  VISION.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
config/: base.yaml  exchanges.yaml  execution.yaml  integrations.yaml  intelligence.yaml  live.yaml  mandates.yaml  monitoring.yaml  paper.yaml  portfolio.yaml  risk.yaml
dashboards/grafana/: ais-dashboard.json  provisioning.yaml
docs/: AGENT_DESIGN.md  API_SPEC.md  DATA_MODEL.md  DECISION_LOG_SCHEMA.md  EVOLUTION_FRAMEWORK.md  EXECUTION_ENGINE.md  MONITORING_AND_OBSERVABILITY.md  PORTFOLIO_ENGINE.md  changelog.md  contributing.md  index.md
docs/adr/: 0001-hmac-risk-tokens.md  0002-exchange-provider-abstraction.md  0003-event-sourced-audit-trail.md  0004-mandate-governance.md  0005-three-execution-modes.md  0006-alpha-intelligence-engine.md  template.md
docs/architecture/: agents.md  data-model.md  exchange-layer.md  execution.md  intelligence.md  overview.md  portfolio.md  risk-engine.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: backtesting.md  deployment.md  monitoring.md  multi-exchange.md  strategy-development.md
docs/operations/: operating-model.md  risk-policy.md  sessions.md
docs/reference/: api.md  configuration.md  decision-log.md  metrics.md  quant-tools.md
docs/stylesheets/: extra.css
examples/: README.md  mean_reversion_agent.py  paper_trading.env
monitoring/: prometheus.yml
monitoring/datasources/: prometheus.yml
scripts/: docker-entrypoint.sh  health_check.py  run_live.py  run_paper.py  run_replay.py
src/aiswarm/: __init__.py  __main__.py  bootstrap.py  main.py
tests/benchmarks/: bench_core.py
tests/integration/: conftest.py  test_api.py  test_pipeline.py
tests/unit/: conftest.py  test_account_setup.py  test_agent_registry.py  test_agents.py  test_alerts.py  test_aster_exchange_provider.py  test_aster_executor.py  test_aster_provider.py  test_auth_live_mode.py  test_binance_provider.py  test_bootstrap.py  test_bybit_provider.py  test_circuit_breaker.py  test_coinbase_provider.py  test_config_loader.py  test_control_api.py  test_control_state_redis.py  test_coordinator.py  test_e2e_trading_cycle.py  test_event_store.py  test_evolution_autoresearch.py  test_evolution_darwinian.py  test_exchange_provider.py  test_exchange_registry.py  test_fill_tracker.py  test_hmac_secret.py  test_ib_provider.py  test_live_executor.py  (+36 more)
(+143 files in other folders)
