[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-investment-swarm"
version = "1.2.0"
description = "Risk-gated autonomous trading system with multi-agent orchestration"
authors = [{name = "Khaled Shihab", email = "khaledshihab73@gmail.com"}]
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
readme = "README.md"
keywords = ["trading", "autonomous", "multi-agent", "risk-management", "crypto", "aster-dex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "numpy>=1.24",
    "prometheus-client>=0.20",
    "pydantic>=2.8",
    "PyYAML>=6.0",
    "redis>=5.0.0",
    "scipy>=1.11",
    "uvicorn>=0.30"
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7",
    "black>=23.0",
    "gunicorn>=21.2.0",
    "hypothesis>=6.100",
    "isort>=5.0",
    "mypy>=1.20.0",
    "pip-audit>=2.7",
    "pre-commit>=3.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.8",
    "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["aiswarm*"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "-rN",
    "--maxfail=5"
]
markers = [
    "slow: Tests that take more than 1 second",
]

[tool.coverage.run]
source = ["aiswarm"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/.pytest_cache/*"
]

[tool.coverage.report]
fail_under = 83
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = "aiswarm.quant.*"
disallow_any_generics = false

[[tool.mypy.overrides]]
module = "aiswarm.evolution.*"
disallow_any_generics = false

[[tool.mypy.overrides]]
module = "aiswarm.simulation.*"
disallow_any_generics = false

[project.urls]
Homepage = "https://github.com/kmshihab7878/Autonomous-Investment-Swarm"
Repository = "https://github.com/kmshihab7878/Autonomous-Investment-Swarm"
Issues = "https://github.com/kmshihab7878/Autonomous-Investment-Swarm/issues"
Documentation = "https://github.com/kmshihab7878/Autonomous-Investment-Swarm/tree/main/docs"

[project.scripts]
ais = "aiswarm.__main__:main"
